# share

./: README.md  azure-pipelines.yml
app/: package-lock.json  package.json  readme.md  vue.config.js
app/src/: App.vue  main.js
app/src/components/: Container.vue
app/src/router/: index.js
app/src/style/: template.css
app/src/views/: 404.vue
server/: Cargo.toml  Dockerfile  readme.md
server/src/: main.rs
server/src/api/v1/common/: mod.rs  routes.rs
server/src/config/: config.env  config.rs  mod.rs
server/src/db/: db.rs  mod.rs
server/src/middlewares/: auth.rs
server/src/models/: file.rs  mod.rs  response.rs  user.rs
