[package]
name = "share-server"
version = "0.1.0"
authors = ["LI Rui <lr_cn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
jsonwebtoken = "7.2.0"
mongodb = "1.2.0"
serde = "1.0.125"
anyhow = "1.0.40"
chrono = {version = "0.4.19", features = ["serde"]}
envfile = "0.2.1"
futures = "0.3.14"
nanoid = "0.4.0"