[package]
name = "share-server"
version = "0.1.0"
authors = ["LI Rui <lr_cn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
jsonwebtoken = "7.2.0"
mongodb = "1.2.0"
serde = "1.0.125"
anyhow = "1.0.40"
chrono = {version = "0.4.19", features = ["serde"]}
futures = "0.3.14"
nanoid = "0.4.0"
rusoto_s3 = "0.46"
rusoto_credential = "0.46"
rusoto_core = "0.46"
rusoto_signature = "0.46"
uuid = "0.8"
rsa = "0.4.0"
rand = "0.8.3"
base64 = "0.13.0"
sha2 = "0.9.5"